# fork-attack

./: README.md  _config.yml  pyproject.toml
data/: LightGBM_code_analysis.json  all_definitions_agg.csv  all_definitions_agg_libs.csv  code_analysis_critical.csv  code_analysis_cwe_critical.csv  code_analysis_cwe_high.csv  code_analysis_cwe_medium.csv  code_analysis_high.csv  code_analysis_medium.csv  code_analysis_result.csv  code_analysis_severity.csv  cve_definitions.csv  cve_definitions_agg.csv  cwe_definitions.csv  cwe_definitions_agg.csv  cwe_definitions_lib.csv  cwe_definitions_lib_agg.csv  dependabot_cve_critical.csv  dependabot_cve_high.csv  dependabot_cve_low.csv  dependabot_cve_medium.csv  dependabot_package_critical.csv  dependabot_package_high.csv  dependabot_package_low.csv  dependabot_package_medium.csv  dependabot_result.csv  dependabot_severity.csv
data/2024-05-16/: LightGBM_code_analysis.json  matplotlib_dependabot_alerts.json  pytorch_code_analysis.json  scikit-learn_code_analysis.json  transformers_dependabot_alerts.json
data/2024-05-17/: feast_dependabot_alerts.json  keras_code_analysis.json  mlflow_code_analysis.json  scikit-learn_code_analysis.json  tensorflow_code_analysis.json  tensorflow_dependabot_alerts.json  transformers_code_analysis.json  xgboost_code_analysis.json
data/2024-05-18/: jieba#jieba-1_code_analysis.json  jieba#jieba-1_dependabot_alerts.json
data/2024-05-19/: AutoViz_code_analysis.json  Auto_ViML_code_analysis.json  (+23 more)
fork_attack/: analysis.py  estige.py  git_fork.py  scan.py  scrap.py  settings.py  time_machine.py  utils.py
(+607 files in other folders)
