[tool.poetry]
name = "fork-attack"
version = "0.1.0"
description = ""
authors = ["Felipe  <f3l1nux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygithub = "^2.3.0"
gitpython = "^3.1.43"
pandas = "^2.2.2"
lxml = "^5.3.1"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
